clusters/titania/apps/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: vaultwarden-ingress
spec:
 tls:
  - hosts:
    - "*.cosmos.cboxlab.com"
    secretName: cosmos-cboxlab-cert
 rules:
 - host: vaultwarden.cosmos.cboxlab.com
   http:
     paths:
     - backend:
         service:
           name: vaultwarden
           port:
             number: 80
       path: /
       pathType: Prefix
